# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import propertiesRouter from "./properties";
+import inquiriesRouter from "./inquiries";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(propertiesRouter);
+router.use(inquiriesRouter);
 
 export default router;
